--- a/humanidades1.html
+++ b/humanidades1.html
@@ -1,6 +1,6 @@
-<html>
+x<html>
 <head>
-<title>HUMANIDADES 1</title>
+<title>index</title>
 </head>
 <body>
 <h1>BIENVENIDO A LA MATERIA DE HUMANIDADES </h1>
